Quest req overflow issue fixed

--- a/src/components/main/moneymakers/methodpage/MethodPage.module.css
+++ b/src/components/main/moneymakers/methodpage/MethodPage.module.css
@@ -91,13 +91,12 @@
 
 .reqsBox {
   position: relative;
-
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  /* flex-wrap: wrap; */
   flex-direction: column;
   /* background-color: red; */
+  width: 20rem;
   gap: 0.65rem;
   padding: 1rem;
   padding-top: 0rem;
@@ -128,7 +127,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  margin: 3rem 0rem;
 }
 
 .resultRow {
@@ -166,6 +164,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  margin: 2.5rem 0rem;
 }
 
 .miniSkillIcon {
@@ -176,4 +175,15 @@
   text-align: center;
   color: gray;
   width: 17rem;
+}
+
+.contentWrapper {
+  display: flex;
+}
+
+.storyBox {
+  width: 100%;
+  height: 40rem;
+  margin-right: 1rem;
+  /* background-color: blue; */
 }
